# stark-swarm

./: LICENSE  README.md
stark-stir-swarm/: Cargo copy.toml  Cargo.toml  [workspace]
stark-stir-swarm/.claude-flow/data/: pending-insights.jsonl
stark-stir-swarm/.claude-flow/sessions/: current.json  session-1777473102027.json  session-1777544395705.json  session-1777544704171.json  session-1777632226757.json
stark-stir-swarm/bench-runs/run-001-port-7910/: cert.pem  fingerprint.hex  key.pem  zone_bundle.json
stark-stir-swarm/bench-runs/run-002-port-7911/: cert.pem  fingerprint.hex  key.pem  zone_bundle.json
stark-stir-swarm/bench-runs/run-004-port-7912/: cert.pem  fingerprint.hex  key.pem  zone_bundle.json
stark-stir-swarm/bench_results/20260503-103521/: _summary.tsv
stark-stir-swarm/bench_results/scaling/mac-mac16,10-20260502-092040/: scaling.tsv
stark-stir-swarm/bench_results/thread_sweep/mac-mac16,10-20260502-102106/: concurrent.tsv
stark-stir-swarm/bench_results/thread_sweep/mac-mac16,10-20260502-102108/: sweep.tsv
stark-stir-swarm/crates/ark-goldilocks/: Cargo.toml  build.rs
stark-stir-swarm/crates/ark-goldilocks/src/: lib.rs
stark-stir-swarm/crates/cairo-bench/: Cargo.toml  cairo_air_bench.csv
stark-stir-swarm/crates/cairo-bench/benches/: cairo_air_bench.rs
stark-stir-swarm/crates/cairo-bench/cairo/: cpu_trace.cairo  dns_record_chain.cairo  fibonacci.cairo  hash_chain.cairo  hash_rollup.cairo
stark-stir-swarm/crates/cairo-bench/examples/: hash_rollup_scale.rs
stark-stir-swarm/crates/cairo-bench/src/: lib.rs
stark-stir-swarm/crates/channel/: Cargo.toml  benchmarkdata.csv
stark-stir-swarm/crates/channel/benches/: end_to_end.rs  multi_air_end_to_end.rs  protocol.rs
stark-stir-swarm/crates/channel/src/: lib.rs
stark-stir-swarm/crates/commitment/: Cargo.toml
stark-stir-swarm/crates/commitment/src/: lib.rs
stark-stir-swarm/crates/deep_ali/: Cargo.toml
stark-stir-swarm/crates/deep_ali/src/: air_workloads.rs  cubic_ext.rs  deep.rs  deep_tower.rs  ed25519_air.rs  ed25519_field.rs  ed25519_field_air.rs  ed25519_group.rs  ed25519_group_air.rs  ed25519_scalar.rs  ed25519_scalar_air.rs  ed25519_scalar_mult_air.rs  ed25519_verify.rs  ed25519_verify_air.rs  fri.rs  lib.rs  octic_ext.rs  p256_ecdsa.rs  p256_ecdsa_air.rs  p256_ecdsa_double_multirow_air.rs  p256_fermat_air.rs  p256_field.rs  p256_field_air.rs  p256_fp_fermat_air.rs  p256_group.rs  p256_group_air.rs  p256_scalar.rs  p256_scalar_air.rs  p256_scalar_mul_air.rs  p256_scalar_mul_multirow_air.rs  quad_ext.rs  rsa2048.rs  rsa2048_exp_air.rs  rsa2048_field_air.rs  rsa2048_stacked_air.rs  sextic_ext.rs  sha256_air.rs  sha512_air.rs  size_schedules.rs  sizing.rs  (+4 more)
stark-stir-swarm/crates/fft/: Cargo.toml
stark-stir-swarm/crates/fft/src/: lib.rs
stark-stir-swarm/crates/field/: Cargo.toml
stark-stir-swarm/crates/field/src/: lib.rs
stark-stir-swarm/crates/hash/: Cargo.toml
stark-stir-swarm/crates/hash/src/: blake3_impl.rs  digest_types.rs  lib.rs  selected.rs  sha3_impl.rs  traits.rs
stark-stir-swarm/crates/merkle/: Cargo.toml
stark-stir-swarm/crates/merkle/benches/: merkle.rs
stark-stir-swarm/crates/merkle/src/: lib.rs
stark-stir-swarm/crates/mle/: Cargo.toml
stark-stir-swarm/crates/mle/src/: lib.rs
stark-stir-swarm/crates/poly/: Cargo.toml
stark-stir-swarm/crates/poly/src/: lib.rs
stark-stir-swarm/crates/poseidon/: Cargo.toml
stark-stir-swarm/crates/poseidon/benches/: poseidon.rs
stark-stir-swarm/crates/poseidon/src/: lib.rs
stark-stir-swarm/crates/public-inputs/: Cargo.toml
stark-stir-swarm/crates/public-inputs/src/: lib.rs
stark-stir-swarm/crates/swarm-bench/: Cargo.toml
stark-stir-swarm/crates/swarm-bench/src/: main.rs
stark-stir-swarm/crates/swarm-ctrl/: Cargo.toml
stark-stir-swarm/crates/swarm-ctrl/src/: main.rs
stark-stir-swarm/crates/swarm-dns/: Cargo.toml
stark-stir-swarm/crates/swarm-dns/examples/: airgapped_resolver_demo.rs  crossalg_three_signature_bench.rs  dns_chain_multirecord_bench.rs  dns_megazone_demo.rs  dns_record_chain_bench.rs  dns_record_ecdsa_vs_ed25519_bench.rs  dns_record_stark_k256_calibration.rs  ds_ksk_bench.rs  ed25519_streaming_merge_bench.rs  edge_consumer_full_demo.rs  epoch_artefact_size_bench.rs  mixed_algorithm_zone_rollup.rs  nsec3_completeness_bench.rs  p256_ecdsa_stark_prove.rs  p256_full_ecdsa_stark_bench.rs  p256_gadget_microbench.rs  p256_multirow_stark_prove.rs  prove_ecdsa_record_v1.rs  prove_rsa2048_record_v1.rs  quantum_mitm_attack_demo.rs  rsa2048_native_roundtrip.rs  rsa2048_streaming_vs_rowmajor_bench.rs  stacked_rsa_zone_prover.rs  tld_sharded_prover_demo.rs  zsk_ksk_bench.rs
stark-stir-swarm/crates/swarm-dns/src/: dns.rs  dns_authority.rs  lib.rs  prover.rs
stark-stir-swarm/crates/swarm-proto/: Cargo.toml
stark-stir-swarm/crates/swarm-proto/src/: cert.rs  frame.rs  lib.rs  messages.rs  tls.rs
stark-stir-swarm/crates/swarm-verify/: Cargo.toml
stark-stir-swarm/crates/swarm-verify/src/: main.rs
stark-stir-swarm/crates/swarm-worker/: Cargo.toml
stark-stir-swarm/crates/swarm-worker/src/: main.rs
stark-stir-swarm/crates/transcript/: Cargo.toml
stark-stir-swarm/crates/transcript/src/: lib.rs
stark-stir-swarm/crates/utils/: Cargo.toml
stark-stir-swarm/crates/utils/src/: lib.rs
stark-stir-swarm/docs/: api-walkthrough.md  cryptographic-architecture.md  dns-rollup-demo.md  iot-memory-bounded-prover.md  oauth2-auth.md  poseidon-accel-measurement.csv  proof-encoding.md  r-per-blowup.md  recursion-demo.md  scaling-analysis.md  swarm-prover.md
stark-stir-swarm/docs/protocol/: Makefile  README.md  swarm-protocol.tex
stark-stir-swarm/docs/protocol/figures/: architecture.tex  sequence-byzantine.tex  (+1 more)
stark-stir-swarm/primary-state/: cert.pem  fingerprint.hex  key.pem  zone_bundle.json
stark-stir-swarm/scripts/: bench_all.sh  bench_scaling.sh  bench_thread_sweep.sh
stark-stir-swarm/swarm-ctrl-state/: cert.pem  fingerprint.hex  key.pem
stark-stir-swarm/witness-a-state/: cert.pem  fingerprint.hex  key.pem
stark-stir-swarm/witness-b-state/: cert.pem  fingerprint.hex  key.pem
(+12 files in other folders)
