[workspace]
members = [
    # Core prover stack — kept verbatim from stark-stir-service.
    "crates/field",
    "crates/utils",
    "crates/fft",
    "crates/poly",
    "crates/poseidon",
    "crates/hash",
    "crates/merkle",
    "crates/transcript",
    "crates/mle",
    "crates/commitment",
    "crates/channel",
    "crates/deep_ali",
    "crates/ark-goldilocks",
    "crates/public-inputs",
    "crates/cairo-bench",
    "crates/swarm-dns",
    "crates/swarm-proto",
    "crates/swarm-ctrl",
    "crates/swarm-worker",
    "crates/swarm-bench",
    "crates/swarm-verify",
    # Swarm-specific crates added in subsequent steps:
    #   "crates/swarm-verify",
    #   "crates/swarm-bench",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Your Name <you@example.com>"]

[workspace.dependencies]
ark-ff = { version = "0.4.2" }
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-poly = "0.4.2"
blake3 = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"
ark-goldilocks = { path = "./crates/ark-goldilocks", version = "0.1.0" }
sha3 = "0.10"
digest = "0.10"
fips204 = "0.4"

# Swarm networking + PQ-TLS stack (option A: standards-track hybrid TLS 1.3).
tokio                = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync"] }
tokio-rustls         = { version = "0.26", default-features = false, features = ["aws-lc-rs", "tls12"] }
rustls               = { version = "0.23", default-features = false, features = ["std", "tls12", "aws-lc-rs"] }
rustls-post-quantum  = { version = "0.2" }
rustls-pemfile       = "2"
rcgen                = "0.13"
ciborium             = "0.2"
clap                 = { version = "4", features = ["derive"] }
anyhow               = "1"
thiserror            = "1"
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }
