[package]
name = "deep_ali"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "DEEP-ALI and FRI scaffolding"
repository = "https://example.com/your/repo"

[features]
default    = []
parallel = ["dep:rayon", "merkle/parallel"]
fri_bench_log = []
sha3-256   = ["hash/sha3-256",   "merkle/sha3-256",   "transcript/sha3-256"]
sha3-384   = ["hash/sha3-384",   "merkle/sha3-384",   "transcript/sha3-384"]
sha3-512   = ["hash/sha3-512",   "merkle/sha3-512",   "transcript/sha3-512"]
blake3-hash = ["hash/blake3-hash", "merkle/blake3-hash", "transcript/blake3-hash"]
# Forward the merkle leaf-compression accelerator (paper dual-hash, §III).
poseidon-accel = ["merkle/poseidon-accel"]

[dependencies]
ark-ff = { version = "0.4.2" }
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"
rayon = { version = "1.10", optional = true }
serde_json = "1"
hash      = { path = "../hash",      default-features = false }
merkle    = { path = "../merkle",    default-features = false }
transcript = { path = "../transcript", default-features = false }
poseidon = { path = "../poseidon" }
ark-goldilocks = { path = "../ark-goldilocks" }
# Bigint arithmetic for the P-256 mul gadget's trace builder
# (`fill_mul_gadget` computes the quotient witness q = (a·b − c)/p
# via BigUint long division — only used at proving time, not in the
# constraint evaluator).  Kept tight: just `num-bigint` and `num-traits`,
# no extra features.
num-bigint = "0.4"
num-traits = "0.2"



[dev-dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
rand = { version = "0.8", features = ["std", "std_rng"] }
blake3 = "1.5"
once_cell = "1.19"
hex = "0.4"
sha2 = "0.10"
# Reference implementation for F_{2^255 - 19} arithmetic — used to
# cross-check the in-circuit `ed25519_field` gadget gadgets.
curve25519-dalek = "4.1"
# Bigint oracle for cross-checking F_p arithmetic for NIST P-256 in
# `p256_field`.  Independent reference, no specific P-256 implementation
# — we treat the Solinas-reduction native code as the spec and test it
# against `BigUint` modular arithmetic.
num-bigint = "0.4"
num-traits = "0.2"