[package]
name = "hash"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sha3-256 = ["dep:sha3", "dep:digest"]
sha3-384 = ["dep:sha3", "dep:digest"]
sha3-512 = ["dep:sha3", "dep:digest"]
blake3-hash = ["dep:blake3"]

[dependencies]
sha3 = { workspace = true, optional = true }
digest = { workspace = true, optional = true }
blake3 = { workspace = true, optional = true }
serde = { workspace = true }
