[package]
name = "swarm-verify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Standalone verifier — loads a swarm-ctrl ZoneBundle and verifies every inner + outer proof, every worker attestation, and the controller's authority signature"

[[bin]]
name = "swarm-verify"
path = "src/main.rs"

[dependencies]
swarm-dns      = { path = "../swarm-dns" }
swarm-proto    = { path = "../swarm-proto" }
deep_ali       = { path = "../deep_ali" }

ark-serialize  = { workspace = true }
fips204        = { workspace = true }
sha3           = { workspace = true }
sha2           = "0.10"
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
clap           = { workspace = true }
anyhow         = { workspace = true }
hex            = "0.4"
ciborium       = { workspace = true }
