[package]
name = "swarm-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Worker node for the STIR DNS swarm — registers with controller and proves shards on demand"

[[bin]]
name = "swarm-worker"
path = "src/main.rs"

[dependencies]
swarm-proto = { path = "../swarm-proto" }
swarm-dns   = { path = "../swarm-dns" }

tokio        = { workspace = true }
tokio-rustls = { workspace = true }
rustls       = { workspace = true }
clap         = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
hex          = "0.4"
rand         = { workspace = true }
sha3         = { workspace = true }
ciborium     = { workspace = true }
