[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[features]
parallel = ["dep:rayon"]

[dependencies]
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
field = { path = "../field" }
ark-goldilocks = { workspace = true }
ark-pallas = "0.5"
rayon = { version = "1.10", optional = true }